Dodanie obsługi buttonu Usuń

--- a/src/main/resources/texts_pl.properties
+++ b/src/main/resources/texts_pl.properties
@@ -10,3 +10,11 @@ main.title = Tabela u\u017Cytkownik\u00F3w
 # buttons labels
 buttonsPanel.addButton = Dodaj
 buttonsPanel.deleteButton = Usu\u0144
+
+# subtitles
+userController.noRowSelected = Nie zaznaczono wiersza
+column.ID=ID
+column.Name=Imi\u0119
+column.Surname=Nazwisko
+column.Age=Wiek
+column.Salary=Pensja
