Dodanie elementów formularza dodawania użytkownika

--- a/src/main/resources/texts_en.properties
+++ b/src/main/resources/texts_en.properties
@@ -20,3 +20,8 @@ column.Name = Name
 column.Surname = Surname
 column.Age = Age
 column.Salary= Salary
+
+# add frame
+addForm.mainTitle = Add a user
+buttonsPanel.okButton = OK
+buttonsPanel.cancelButton = Cancel
