Formularz dodawania nowego usera

--- a/src/main/resources/texts_pl.properties
+++ b/src/main/resources/texts_pl.properties
@@ -18,3 +18,6 @@ column.Name=Imi\u0119
 column.Surname=Nazwisko
 column.Age=Wiek
 column.Salary=Pensja
+addForm.mainTitle=Dodaj u\u017Cytkownika
+buttonsPanel.okButton=OK
+buttonsPanel.cancelButton=Zamknij
