Added a user-adding form

--- a/src/main/resources/texts_en.properties
+++ b/src/main/resources/texts_en.properties
@@ -25,3 +25,7 @@ column.Salary= Salary
 addForm.mainTitle = Add a user
 buttonsPanel.okButton = OK
 buttonsPanel.cancelButton = Cancel
+addPanel.nameLbl=Name
+addPanel.surnameLbl=Surname
+addPanel.dobLbl=Date of birth
+addPanel.salaryLbl=Salary
