--- a/src/main/resources/texts_pl.properties
+++ b/src/main/resources/texts_pl.properties
@@ -13,11 +13,19 @@ buttonsPanel.deleteButton = Usu\u0144
 
 # subtitles
 userController.noRowSelected = Nie zaznaczono wiersza
+
+#column titles
 column.ID=ID
 column.Name=Imi\u0119
 column.Surname=Nazwisko
 column.Age=Wiek
 column.Salary=Pensja
+
+#add frame
 addForm.mainTitle=Dodaj u\u017Cytkownika
 buttonsPanel.okButton=OK
 buttonsPanel.cancelButton=Zamknij
+addPanel.nameLbl = Imi\u0119
+addPanel.surnameLbl = Nazwisko
+addPanel.dobLbl = Data urodzenia
+addPanel.salaryLbl = Pensja
